--- a/refs.bib
+++ b/refs.bib
@@ -8817,6 +8817,25 @@ year={2015}
   year      = {2017}
 }
 
+@article{lee2015warped,
+  title={Warped-compression: Enabling power efficient gpus through register compression},
+  author={Lee, Sangpil and Kim, Keunsoo and Koo, Gunjae and Jeon, Hyeran and Ro, Won Woo and Annavaram, Murali},
+  journal={ACM SIGARCH Computer Architecture News},
+  volume={43},
+  number={3S},
+  pages={502--514},
+  year={2015},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{asghari2019corf,
+  title={Corf: Coalescing operand register file for gpus},
+  author={Asghari Esfeden, Hodjat and Khorasani, Farzad and Jeon, Hyeran and Wong, Daniel and Abu-Ghazaleh, Nael},
+  booktitle={Proceedings of the Twenty-Fourth International Conference on Architectural Support for Programming Languages and Operating Systems},
+  pages={701--714},
+  year={2019}
+}
+
 @inproceedings{lee:bigcomp17:activity-cnn,
   title={Human activity recognition from accelerometer data using Convolutional Neural Network},
   author={Lee, Song-Mi and Yoon, Sang Min and Cho, Heeryon},
@@ -9121,6 +9140,17 @@ month={March},}
   year={2016}
 }
 
+@article{bankman2018always,
+  title={An Always-On 3.8$$\backslash$mu $ J/86\% CIFAR-10 mixed-signal binary CNN processor with all memory on chip in 28-nm CMOS},
+  author={Bankman, Daniel and Yang, Lita and Moons, Bert and Verhelst, Marian and Murmann, Boris},
+  journal={IEEE Journal of Solid-State Circuits},
+  volume={54},
+  number={1},
+  pages={158--172},
+  year={2018},
+  publisher={IEEE}
+}
+
 % Super low power, but tiny
 @INPROCEEDINGS{fick2017subthresholdinference, 
 author={L. Fick and D. Blaauw and D. Sylvester and S. Skrzyniarz and M. Parikh and D. Fick}, 
@@ -9134,6 +9164,31 @@ keywords={analogue storage;low-power electronics;neural nets;SONOS process;analo
 doi={10.1109/CICC.2017.7993629}, 
 ISSN={}, 
 month={April},}
+
+@inproceedings{xue202015,
+  title={15.4 A 22nm 2Mb ReRAM compute-in-memory macro with 121-28TOPS/W for multibit MAC computing for tiny AI edge devices},
+  author={Xue, Cheng-Xin and Huang, Tsung-Yuan and Liu, Je-Syu and Chang, Ting-Wei and Kao, Hui-Yao and Wang, Jing-Hong and Liu, Ta-Wei and Wei, Shih-Ying and Huang, Sheng-Po and Wei, Wei-Chen and others},
+  booktitle={2020 IEEE International Solid-State Circuits Conference-(ISSCC)},
+  pages={244--246},
+  year={2020},
+  organization={IEEE}
+}
+
+@article{lazo2021adaptable,
+  title={Adaptable Register File Organization for Vector Processors},
+  author={Lazo, Crist{\'o}bal Ram{\'\i}rez and Reggiani, Enrico and Morales, Carlos Rojas and Bagu{\'e}, Roger Figueras and Vargas, Luis Alfonso Villa and Salinas, Marco Antonio Ram{\'\i}rez and Cort{\'e}s, Mateo Valero and Unsal, Osman Sabri and Cristal, Adri{\'a}n},
+  journal={arXiv preprint arXiv:2111.05301},
+  year={2021}
+}
+
+@inproceedings{xue201924,
+  title={24.1 A 1Mb multibit ReRAM computing-in-memory macro with 14.6 ns parallel MAC computing time for CNN based AI edge processors},
+  author={Xue, Cheng-Xin and Chen, Wei-Hao and Liu, Je-Syu and Li, Jia-Fang and Lin, Wei-Yu and Lin, Wei-En and Wang, Jing-Hong and Wei, Wei-Chen and Chang, Ting-Wei and Chang, Tung-Cheng and others},
+  booktitle={2019 IEEE International Solid-State Circuits Conference-(ISSCC)},
+  pages={388--390},
+  year={2019},
+  organization={IEEE}
+}
 
 @ARTICLE{price2018speech, 
 author={M. Price and J. Glass and A. P. Chandrakasan}, 
@@ -9227,6 +9282,16 @@ keywords={Internet of Things;data handling;diagnostic reasoning;learning (artifi
 doi={10.1109/HPCA.2018.00018}, 
 ISSN={}, 
 month={Feb},}
+
+@inproceedings{tan2019efficientnet,
+  title={Efficientnet: Rethinking model scaling for convolutional neural networks},
+  author={Tan, Mingxing and Le, Quoc},
+  booktitle={International conference on machine learning},
+  pages={6105--6114},
+  year={2019},
+  organization={PMLR}
+}
+
 @inproceedings{courbariaux2015binaryconnect,
   title={Binaryconnect: Training deep neural networks with binary weights during propagations},
   author={Courbariaux, Matthieu and Bengio, Yoshua and David, Jean-Pierre},
@@ -9428,6 +9493,15 @@ year={2018}
 }
 
 @misc{jackson_2019, title={lab11/permamote}, url={https://github.com/lab11/permamote}, journal={GitHub}, author={Jackson, Neal}, year={2019}, month={Apr}}
+
+@inproceedings{deng2018permdnn,
+  title={PermDNN: Efficient compressed DNN architecture with permuted diagonal matrices},
+  author={Deng, Chunhua and Liao, Siyu and Xie, Yi and Parhi, Keshab K and Qian, Xuehai and Yuan, Bo},
+  booktitle={2018 51st Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)},
+  pages={189--202},
+  year={2018},
+  organization={IEEE}
+}
 
 @article{culler2002mica,
   title={Mica: The commercialization of microsensor motes},
@@ -10096,6 +10170,14 @@ numpages = {10}
   author={Mahadev Satyanarayanan and Nathan Beckmann and Grace A. Lewis and Brandon Lucia},
   booktitle={HotMobile},
   year={2021}
+}
+
+@inproceedings{sandler2018mobilenetv2,
+  title={Mobilenetv2: Inverted residuals and linear bottlenecks},
+  author={Sandler, Mark and Howard, Andrew and Zhu, Menglong and Zhmoginov, Andrey and Chen, Liang-Chieh},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={4510--4520},
+  year={2018}
 }
 
 @inproceedings{cherupalli:isca17:bespoke,
